--- a/IMS/invoicemgt/static/css/stylesheet.css
+++ b/IMS/invoicemgt/static/css/stylesheet.css
@@ -1,3 +1,22 @@
-body{
+/*body{
     background-color: #eb4634;
+}
+*/
+.myform{
+    margin: 30px;
+}
+
+.table{
+    font-size: 13px;
+    text-align: center;
+    width: 95%;
+    margin: auto;
+}
+
+.table tr:nth-child(odd){
+    background: #88CAE4;
+}
+
+.table tr:nth-child(even){
+    background: #dae5f4;
 }
