--- a/IMS/invoicemgt/templates/entry.html
+++ b/IMS/invoicemgt/templates/entry.html
@@ -6,57 +6,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
     <title>{{title}}</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <div class="myform">
         <form action="" method="POST">{% csrf_token %}
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="form-row">
+
+                    <div class="row">
                         <div class="form-group col-md-6">
-                            {{ form.invoice_date | as_crispy_field }}
-                            {{ form.name | as_crispy_field }}
+                            {{ form.invoice_date|as_crispy_field }}
+                            {{ form.name|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-6">
-                            {{ form.invoice_number | as_crispy_field }}
-                            {{ form.phone_number | as_crispy_field }}
+                            {{ form.invoice_number|as_crispy_field }}
+                            {{ form.phone_number|as_crispy_field }}
                         </div>
                     </div>
-                    <div class="form-row">
+
+                    <div class="row">
                         <div class="form-group col-md-6">
-                            {{ form.line_one | as_crispy_field }}
+                            {{ form.line_one|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_one_quantity | as_crispy_field }}
+                            {{ form.line_one_quantity|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_one_unit_price | as_crispy_field }}
+                            {{ form.line_one_unit_price|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_one_total_price | as_crispy_field }}
+                            {{ form.line_one_total_price|as_crispy_field }}
                         </div>
                     </div>
-                    <div class="form-row">
+
+                    <div class="row">
                         <div class="form-group col-md-6">
-                            {{ form.line_two | as_crispy_field }}
+                            {{ form.line_two|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_two_quantity | as_crispy_field }}
+                            {{ form.line_two_quantity|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_two_unit_price | as_crispy_field }}
+                            {{ form.line_two_unit_price|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-2">
-                            {{ form.line_two_total_price | as_crispy_field }}
+                            {{ form.line_two_total_price|as_crispy_field }}
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="form-group col-md-12">
-                            {{ form.invoice_type | as_crispy_field }}
+                            {{ form.invoice_type|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-12">
-                            {{ form.total | as_crispy_field }}
+                            {{ form.total|as_crispy_field }}
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Save</button>
