--- a/IMS/invoicemgt/templates/list_invoice.html
+++ b/IMS/invoicemgt/templates/list_invoice.html
@@ -6,19 +6,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
     <title>List of Invoices</title>
 </head>
 <body> 
-    {{title}} <br>
+    {% include 'navbar.html' %}
+
+    {{title}} 
     <br>
-    {% for instance in queryset %}
-        {{instance.invoice_date}}
-        {{instance.name}}
-        {{instance.invoice_number}}
-        {{instance.invoice_type}}
-        {{instance.line_one_total_price}}
+    <div class="myform">
+        <form action="" method="POST">{% csrf_token %}
+            {{form|crispy}}
+            <br>
+            <input type="submit" value="Search">
+        </form>
+    </div>
     <br>
-    
-    {% endfor %} 
+    <br>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>COUNT</th>
+                <th>DATE</th>
+                <th>CUSTOMER NAME</th>
+                <th>INVOICE NUMBER</th>
+                <th>TOTAL</th>
+            </tr>
+        </thead>
+        {% for instance in queryset %}
+        <tr>
+            <td>{{forloop.counter}}</td>
+            <td>{{instance.invoice_date}}</td>
+            <td><a href="{% url 'update_invoice' instance.id %}">{{instance.name}}</a></td>
+            <td>{{instance.invoice_number}}</td>
+            <!---<td>{{instance.invoice_type}}</td>--->
+            <td>{{instance.line_one_total_price}}</td>
+        </tr> 
+        {% endfor %}  
+    </table>
+    <br>
+     
 </body>
 </html>
