Jquery hide and show pane

--- a/IMS/invoicemgt/static/css/stylesheet.css
+++ b/IMS/invoicemgt/static/css/stylesheet.css
@@ -20,3 +20,11 @@
 .table tr:nth-child(even){
     background: #dae5f4;
 }
+
+.messages{
+    list-style: none;
+    background-color: #2e6da4;
+    color: #fff;
+    box-shadow: 12px 12px 12px #e61c66;
+    text-align: center; 
+}
