--- a/IMS/invoicemgt/templates/entry.html
+++ b/IMS/invoicemgt/templates/entry.html
@@ -5,70 +5,221 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="{% static 'js/jquery-ui-1.13.3/jquery-ui.min.css' %}">
+    <link rel="stylesheet" href="{% static 'js/jquery-ui-1.13.3/jquery-ui.structure.min.css' %}">
+    <link rel="stylesheet" href="{% static 'js/jquery-ui-1.13.3/jquery-ui.theme.min.css' %}">
+
+    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}">
     <title>{{title}}</title>
 </head>
 <body>
     {% include 'navbar.html' %}
-    <div class="myform">
-        <form action="" method="POST">{% csrf_token %}
-            <div class="row">
-                <div class="col-sm-6">
-
+    <div class="row">
+        <div class="col-sm-9">
+            <div class="myform">
+                <form action="" method="POST">{% csrf_token %}
                     <div class="row">
-                        <div class="form-group col-md-6">
-                            {{ form.invoice_date|as_crispy_field }}
-                            {{ form.name|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-6">
-                            {{ form.invoice_number|as_crispy_field }}
-                            {{ form.phone_number|as_crispy_field }}
-                        </div>
-                    </div>
+                        <div class="col-sm-9">
+        
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.invoice_date|as_crispy_field }}
+                                    {{ form.name|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-6">
+                                    {{ form.invoice_number|as_crispy_field }}
+                                    {{ form.phone_number|as_crispy_field }}
+                                </div>
+                            </div>
+        
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_one|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_one_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_one_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_one_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+        
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_two|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_two_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_two_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_two_total_price|as_crispy_field }}
+                                </div>
+                            </div>
 
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            {{ form.line_one|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_one_quantity|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_one_unit_price|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_one_total_price|as_crispy_field }}
-                        </div>
-                    </div>
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_three|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_three_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_three_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_three_total_price|as_crispy_field }}
+                                </div>
+                            </div>
 
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            {{ form.line_two|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_two_quantity|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_two_unit_price|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-2">
-                            {{ form.line_two_total_price|as_crispy_field }}
-                        </div>
-                    </div>
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_four|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_four_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_four_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_four_total_price|as_crispy_field }}
+                                </div>
+                            </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-12">
-                            {{ form.invoice_type|as_crispy_field }}
-                        </div>
-                        <div class="form-group col-md-12">
-                            {{ form.total|as_crispy_field }}
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_five|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_five_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_five_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_five_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_six|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_six_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_six_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_six_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_seven|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_seven_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_seven_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_seven_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_eight|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_eight_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_eight_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_eight_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_nine|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_nine_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_nine_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_nine_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    {{ form.line_ten|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_ten_quantity|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_ten_unit_price|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-2">
+                                    {{ form.line_ten_total_price|as_crispy_field }}
+                                </div>
+                            </div>
+        
+                            <div class="form-row">
+                                <div class="form-group col-md-12">
+                                    {{ form.invoice_type|as_crispy_field }}
+                                </div>
+                                <div class="form-group col-md-12">
+                                    {{ form.total|as_crispy_field }}
+                                </div>
+                            </div>
+                            <br>
+                            <button id="more-line" type="button" class="btn btn-primary">Show / Hide More Lines</button><br><br>
+                            <button type="submit" class="btn btn-danger">Save</button>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Save</button>
-                </div>
+                </form>
             </div>
-        </form>
+        </div>
+    
+        <div class="col-sm-3">
+            <div class="recent">
+                <span class="">Recent Invoices</span>
+                <span class="">{{ total_invoice }}</span>
+                <br><br>
+                {% for instance in queryset %}
+                <div>
+                    <div class="">{{ instance.name }}</div>
+                    <div class="">{{ instance.invoice_date }}</div>
+                </div>
+                <div class="">$ {{ instance.total }}</div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'jquery-ui-1.13.3/jquery-ui.js' %}"></script>
+    <script src="{% static 'js/myjs.js' %}"></script>
 </body>
 </html>
