--- a/IMS/invoicemgt/templates/navbar.html
+++ b/IMS/invoicemgt/templates/navbar.html
@@ -1,5 +1,10 @@
-<div>
-    <li><a href="/">Home</a></li>
-    <li><a href="/add_invoice">Add Invoice</a></li>
-    <li><a href="/list_invoice">List Invoice</a></li>
-</div>
+<nav>
+
+    <div class="mymenu-bar">
+        <br>
+        <a href="/list_invoice"><div class="btn btn-primary mybutton">List Invoice</div></a>
+        <br><br>
+        <a href="/add_invoice"><div class="btn btn-primary mybutton">New Invoice</div></a>
+
+    </div>
+</nav>
