--- a/IMS/invoicemgt/templates/entry.html
+++ b/IMS/invoicemgt/templates/entry.html
@@ -229,7 +229,8 @@
     </div>
     
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <script src="{% static 'jquery-ui-1.13.3/jquery-ui.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.13.3/jquery-ui.js' %}"></script>
+    <script src="{% static 'js/pager/paging.js' %}"></script>
     <script src="{% static 'js/myjs.js' %}"></script>
 </body>
 </html>
